add readme and reshape the code

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
     <!-- jquery -->
-    <script src="jquery-2.1.2.min.js"></script>
+    <script src="js/jquery-2.1.2.min.js"></script>
 
     <!-- Viewer staging -->
     <!--link type="text/css" rel="stylesheet" href="https://developer-stg.api.autodesk.com/viewingservice/v1/viewers/style.css"/>
@@ -34,9 +34,9 @@
     <script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/viewer3D.js"></script>
 
     <!-- Autodesk.ADN.Toolkit.Viewer -->
-    <script src="https://rawgit.com/Developer-Autodesk/library-javascript-view.and.data.api/master/js/Autodesk.ADN.Toolkit.Viewer.js"></script>
+    <script src="js/Autodesk.ADN.Toolkit.Viewer.js"></script>
 
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 
 
 </head>
