--- a/www/offline.html
+++ b/www/offline.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="offline-libs/style.css">
     <script src="offline-libs/viewer3D.js"></script>
 
-    <script src="offline.js"></script>
+    <script src="js/offline.js"></script>
 
 </head>
 
