--- a/www/upload.html
+++ b/www/upload.html
@@ -4,12 +4,12 @@
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
     <!-- jquery -->
-    <script src="jquery-2.1.2.min.js"></script>
+    <script src="js/jquery-2.1.2.min.js"></script>
 
     <!-- Bootstrap CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet" />
+    <link href="js/bootstrap.min.css" rel="stylesheet" />
 
-    <script src="/upload.js"></script>
+    <script src="js/upload.js"></script>
 </head>
 
 <body>
@@ -55,7 +55,8 @@
 
     </div>
     <a class="btn btn-primary" id="btnDownload">Download Offline Model</a>
-    <legend>off line svf list</legend>
+    <legend>Off-Line svf List</legend>
+    <br/>
     <div>Click on a svf below to launch the viewer (off-line model)</div>
     <div id="offlinelist"></div>
 
