--- a/www/offline.html
+++ b/www/offline.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Viewer 3D Demo : @buildnum@</title>
-    <script src="jquery-2.1.2.min.js"></script>
+    <script src="js/jquery-2.1.2.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="offline-libs/style.css">
     <script src="offline-libs/viewer3D.js"></script>
