reshape to support resumable uploading for large file
to support large file and monitor the process, I modified the NPM
module. so isolated the NPM code as  a project code.

--- a/www/upload.html
+++ b/www/upload.html
@@ -55,6 +55,10 @@
 
     </div>
     <a class="btn btn-primary" id="btnDownload">Download Offline Model</a>
+    <br/>
+    <div id="msgdownload"></div>
+    <br/>
+    <br/>
     <legend>Off-Line svf List</legend>
     <br/>
     <div>Click on a svf below to launch the viewer (off-line model)</div>
