--- a/www/upload.html
+++ b/www/upload.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>ADN Viewer Demo (server upload)</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
     <!-- jquery -->
